update for R 3.6 news md support

--- a/README.Rmd
+++ b/README.Rmd
@@ -31,11 +31,10 @@ read_file("alpine", "/etc/alpine-release")
 
 ## Latest changes
 
-Check out `news(package = "dynutils")` or [NEWS.md](inst/NEWS.md) for a full list of changes.
+Check out `news(package = "dynutils")` or [NEWS.md](NEWS.md) for a full list of changes.
 
-<!-- This section gets automatically generated from inst/NEWS.md, and also generates inst/NEWS -->
+<!-- This section gets automatically generated from NEWS.md -->
 
 ```{r news, echo=FALSE, results="asis"}
-dynutils::update_news()
 cat(dynutils::recent_news())
 ```
