--- a/README.Rmd
+++ b/README.Rmd
@@ -6,9 +6,12 @@ output:
 
 # babelwhale: talk to docker and singularity from R
 
-`r badger::badge_travis("dynverse/babelwhale")`
+
+<!-- badges: start -->
+[![R-CMD-check](https://github.com/dynverse/babelwhale/workflows/R-CMD-check/badge.svg)](https://github.com/dynverse/babelwhale/actions)
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/babelwhale)](https://cran.r-project.org/package=babelwhale)
-`r badger::badge_codecov("dynverse/babelwhale")`
+[![Codecov](https://codecov.io/gh/dynverse/babelwhale/branch/master/graph/badge.svg)](https://codecov.io/gh/dynverse/babelwhale)
+<!-- badges: end -->
 
 Specify docker or singularity
 
