--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ output:
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/dynverse/babelwhale/workflows/R-CMD-check/badge.svg)](https://github.com/dynverse/babelwhale/actions)
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/babelwhale)](https://cran.r-project.org/package=babelwhale)
-[![Codecov test coverage](https://codecov.io/gh/dynverse/babelwhale/branch/master/graph/badge.svg)](https://codecov.io/gh/dynverse/babelwhale?branch=master)
+[![Codecov test coverage](https://app.codecov.io/gh/dynverse/babelwhale/branch/master/graph/badge.svg)](https://app.codecov.io/gh/dynverse/babelwhale?branch=master)
 <!-- badges: end -->
 
 Specify docker or singularity
